apps/plantsuite/gateway/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: gateway
          image: plantsuite.azurecr.io/plantsuite-gateway:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            timeoutSeconds: 3
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            timeoutSeconds: 3
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 3
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 30
          volumeMounts:
            - name: appsettings
              readOnly: true
              mountPath: /app/appsettings.json
              subPath: appsettings.json
        - name: gateway-ui
          image: plantsuite.azurecr.io/plantsuite-gateway-ui:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http-ui
              containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            timeoutSeconds: 3
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            timeoutSeconds: 3
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 3
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 30
          volumeMounts:
            - name: appsettings-ui
              readOnly: true
              mountPath: /usr/share/nginx/html/configs/app-config.prod.json
              subPath: appsettings-ui.json
      volumes:
        - name: appsettings
          configMap:
            name: gateway-appsettings
            items:
              - key: appsettings.json
                path: appsettings.json
        - name: appsettings-ui
          configMap:
            name: gateway-appsettings-ui
            items:
              - key: appsettings-ui.json
                path: appsettings-ui.json                
      imagePullSecrets:
        - name: plantsuite-cr
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
